data/test/type_check/fail/generate_2.v
wire x;
case (x) 
  1: initial $display("hello");
  default: initial $display("world");
endcase
